testsuite/tests/properties/invalid_lambda_arg_type/all_no_index/test.lkt
from common import BaseExampleBlock, Example, FooNode, IndexedItem

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[Entity[Example]] =
        node.items.all((e: Int) => e == 0)
}
